Fixed background picture not showing

--- a/main/html/MainHomePageStyle.css
+++ b/main/html/MainHomePageStyle.css
@@ -6,7 +6,7 @@
 
 /* ---- banner ---- */
 
-.banner{
+/* .banner{
     width: 100%;
     min-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -14,7 +14,7 @@
     background-size: cover;
     background-position: center;
     position: relative;
-}
+} */
 
 
 nav{
